# ledidi

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: conf.py  faq.rst  getting_started.rst  index.rst  input_output.rst  parameters.rst  requirements.txt  whats_new.rst
docs/_static/: custom.css
docs/api/: ledidi.rst  losses.rst  plot.rst  pruning.rst  wrappers.rst
docs/tutorials/: Tutorial_0_-_Getting_Started.ipynb  Tutorial_1_-_Design_of_Protein_Binding_Sites.ipynb  Tutorial_2_-_Constraints_and_Priors.ipynb  Tutorial_3_-_In-Painting.ipynb  Tutorial_4_-_Multiple_Models.ipynb  Tutorial_5_-_Affinity_Catalogs.ipynb  Tutorial_6_-_Custom_Loss_Functions.ipynb  Tutorial_7_-_Validating_Your_Designs.ipynb  Tutorial_8_-_The_Ledidi_Object.ipynb
ledidi/: __init__.py  ledidi.py  losses.py  plot.py  pruning.py  wrappers.py
tests/: conftest.py  test_gpu.py  test_ledidi.py  test_losses.py  test_plot.py  test_pruning.py  test_wrappers.py  toy_models.py
tutorials/: CTCF-seqs.npz  Tutorial 1 AP-1 Design with DeepSEA-Beluga.ipynb  Tutorial 1 Simple AP-1 Design with DeepSEA-Beluga.ipynb  Tutorial 1. CTCF Perturbation with SimpleNet.ipynb  Tutorial 2 SPI1 Design with BPNet.ipynb
tutorials/SimpleNet-CTCF/: saved_model.pb
tutorials/SimpleNet-CTCF/variables/: variables.data-00000-of-00001  variables.index
