[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledidi"
dynamic = ["version"]
description = "Ledidi is an optimization approach for designing edits to biological sequences."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jacob Schreiber", email = "jmschreiber91@gmail.com" },
    { name = "Yang Lu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch >= 1.9.0",
    "numpy",
    "pandas",
    "matplotlib",
    "logomaker",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "gpu: requires a CUDA device; deselected by default, run with `-m gpu`",
]
addopts = "-m 'not gpu'"

[project.urls]
Homepage = "https://github.com/jmschrei/ledidi"
Documentation = "https://ledidi.readthedocs.io/en/latest/"
Repository = "https://github.com/jmschrei/ledidi"

[tool.hatch.version]
path = "ledidi/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ledidi"]
